--- a/CSLibretro.csproj
+++ b/CSLibretro.csproj
@@ -72,9 +72,12 @@
   <ItemGroup>
     <Compile Include="Core.cs" />
     <Compile Include="Libretro\Delegates.cs" />
+    <Compile Include="Libretro\Enums\Device.cs" />
     <Compile Include="Libretro\Enums\EnvironmentCommand.cs" />
+    <Compile Include="Libretro\Enums\JoypadInputID.cs" />
     <Compile Include="Libretro\Enums\LogLevel.cs" />
     <Compile Include="Libretro\Enums\MemoryType.cs" />
+    <Compile Include="Input.cs" />
     <Compile Include="Libretro\Structs\GameGeometry.cs" />
     <Compile Include="Libretro\Structs\GameInfo.cs" />
     <Compile Include="Libretro\Structs\InputDescriptor.cs" />
